[gd_scene load_steps=3 format=3 uid="uid://d1qorxofttse5"]

[ext_resource type="Script" path="res://tent/interaction_field.gd" id="1_iohgi"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yyicv"]
radius = 3.0

[node name="InteractionField" type="Area3D"]
collision_layer = 0
script = ExtResource("1_iohgi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_yyicv")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClosestInteractable" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -11.5
offset_right = 111.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
